--- a/config
+++ b/config
@@ -29,6 +29,7 @@ shell-integration-features = no-cursor
 
 background-opacity = 0.75
 
+# Default keybindings conflict with ubuntu workspace swapping.
 keybind = ctrl+super+h=goto_split:left
 keybind = ctrl+super+j=goto_split:down
 keybind = ctrl+super+k=goto_split:up
