--- a/config
+++ b/config
@@ -35,6 +35,8 @@ keybind = ctrl+super+j=goto_split:down
 keybind = ctrl+super+k=goto_split:up
 keybind = ctrl+super+l=goto_split:right
 
+theme = dark:catppuccin-frappe,light:catppuccin-latte
+
 # # Any line beginning with a # is a comment. It's not possible to put
 # # a comment after a config option, since it would be interpreted as a
 # # part of the value. For example, this will have a value of "#123abc":
