--- a/config
+++ b/config
@@ -25,6 +25,7 @@ window-padding-x = 2
 font-size = 8
 
 cursor-style = block
+cursor-color = #FFA500
 shell-integration-features = no-cursor
 
 background-opacity = 0.75
