--- a/config
+++ b/config
@@ -23,6 +23,7 @@
 font-family = monospace 
 window-padding-x = 0
 window-padding-y = 0
+window-decoration = none
 font-size = 10
 
 cursor-style = block
